--- a/nir/research/05-design.tex
+++ b/nir/research/05-design.tex
@@ -1,2 +1,44 @@
 \chapter{Робот Ф-2}
 
+\textbf{Робот Ф-2} -- исследовательский проект, в рамках которого изучаются способы как сделать роботов более привлекательными для человека. Робот способен воспроизводить эмоциональные и рациональные реакции, используя жесты, речь, мимику. 
+
+Робот состоит из следующих основных компонент (в рамках данной работы не рассматриваются компоненты, связанные с компьютерным зрением и тактильным восприятием) \cite{arch_of_the_robot}:
+
+\begin{itemize}
+	\item лингвистический;
+	\item компонент сценариев;
+	\item компонент управления.
+\end{itemize}
+
+
+% картинка архитектуры
+
+
+\section{Лингвистический компонент}
+
+Для того, чтобы Ф-2 мог корректно среагировать на входящее сообщение на естественном языке (текстовое или аудио) необходимо провести соответствующую обработку сообщения. Это и есть задача лингвистического компонента (ЛК).
+
+ЛК разделен на 3 модуля, которые работают последовательно \cite{arch_of_the_robot}: 
+
+\begin{enumerate}
+	\item \textbf{морфологический} -- для каждой словоформы в тексте приписывает ей морфологические и семантические признаки \cite{arch_of_the_robot_2}. В основе работы данного модуля лежит словарь из 100 тысяч лексем на основе проекта OpenCorpora \cite{arch_of_the_robot_3};
+	
+	\item \textbf{синтаксический} -- для каждого предложения строятся одно или несколько синтаксических деревьев. Для этого используется словарь формализованных правил русского языка на языке syntXML;
+	
+	\item \textbf{семантический} -- для каждого синтаксического дерева строится его семантическое представление, назначая существительному, или местоимению определенную валентность и семантические признаки, связанные с валентностью.
+\end{enumerate}
+
+
+\clearpage
+
+\section{Компонент сценариев}
+
+Поступающее на вход семантическое представление сравнивается с набором сценариев (д-сценарии и p-сценарии). Д-сценарии есть доминантные сценарии -- базовые аналоги эмоций, p-сценарии -- рациональные сценарии реагирования \cite{arch_of_the_robot_4}. 
+
+Каждый сценарий включает аналогичные семантические структуры -- множества признаков, распределённых по валентностям. Следовательно, для каждой пары вида <семантическое представление, сценарий> вычисляется мера близости, она зависит от числа совпавших семантических признаков в тождественных валентностях. На основе меры близости и чувствительности сценариев вычисляется активизация каждого сценария \cite{arch_of_the_robot_5}.
+
+Наиболее активировавшийся сценарий выражается через коммуникативные функции, передавая на робота жесты, элементы мимики и речь в формате BML (Behavior Markup Language).
+
+\section{Компонент управления}
+
+Компонент управления отвечает выполнение поступивших BML-пакетов с помощью жестов, мимики, речи \cite{arch_of_the_robot}.
