--- a/nir/research/biblio.bib
+++ b/nir/research/biblio.bib
@@ -32,3 +32,75 @@
 	title="Affective Robotics For Wellbeing: A Scoping Review [Электронный ресурс].",
 	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/abstract/document/10085995} (дата обращения: 22.09.2025)."
 }
+
+@inproceedings{arch_of_the_robot,
+	author       = {Котов, А.А. and Аринкин, Н.А. and Зайдельман, Л.Я. and Зинина, А.А.},
+	title        = {Когнитивная архитектура робота Ф-2, поддерживающего коммуникацию с человеком},
+	booktitle    = {Нелинейная динамика в когнитивных исследованиях – 2017. Труды V всероссийской конференции},
+	address      = {Нижний Новгород},
+	publisher    = {ИПФ РАН},
+	year         = {2017},
+	pages        = {126--127},
+	language     = {russian},
+}
+
+@inproceedings{vinogradova2025dialog,
+	author       = {Виноградова, Е.П. and Волкова, Л.Л.},
+	title        = {О выборе методов ведения диалога программой-собеседником с учетом фактора темперамента},
+	booktitle    = {Фундаментальные, поисковые, прикладные исследования и инновационные проекты: сборник трудов Национальной научно-практической конференции},
+	editor       = {Увайсов, С.У.},
+	address      = {Москва},
+	publisher    = {Ассоциация выпускников и сотрудников ВВИА им. проф. Жуковского},
+	year         = {2025},
+	pages        = {121--125},
+	language     = {russian},
+}
+
+@inproceedings{arch_of_the_robot_2,
+	author       = {Зайдельман, Л.Я. and Котов, А.А. and Зинина, А.А. and Аринкин, Н.А.},
+	title        = {Система понимания текста для робота Ф-2: синтаксический анализ и извлечение смысла},
+	booktitle    = {Восьмая международная конференция по когнитивной науке: Тезисы докладов},
+	editor       = {Крылов, А.К. and Соловьев, В.Д.},
+	address      = {Светлогорск},
+	location     = {Светлогорск},
+	date         = {2018-10-18},
+	eventdate    = {2018-10-18/2018-10-21},
+	publisher    = {Изд-во «Институт психологии РАН»},
+	year         = {2018},
+	pages        = {388--391},
+	note         = {Постер},
+	language     = {russian},
+}
+
+@inproceedings{arch_of_the_robot_3,
+	author       = {Грановский, Д. В. and Бочаров, В. В. and Бичинева, С. В.},
+	title        = {Открытый корпус: принципы работы и перспективы},
+	booktitle    = {Компьютерная лингвистика и развитие семантического поиска в Интернете: Труды научного семинара XIII Всероссийской единой конференции «Интернет и современное общество»},
+	year         = {2010},
+	address      = {Санкт-Петербург},
+	pages        = {94},
+	language     = {russian},
+}
+
+@inproceedings{arch_of_the_robot_4,
+	author       = {Котов, А. А. and Носовец, З. А.},
+	title        = {Конструирование роботом репрезентаций производных ситуаций при обработке смысла текста},
+	booktitle    = {Робототехника и искусственный интеллект: материалы XV Всероссийской научно-технической конференции с международным участием (г.~Железногорск, 2 декабря 2023~г.)},
+	editor       = {Углев, В. А.},
+	address      = {Красноярск},
+	publisher    = {Литера-принт},
+	year         = {2023},
+	pages        = {189--194},
+	language     = {russian},
+}
+
+
+@inproceedings{arch_of_the_robot_5,
+	author       = {Зинина, А. А. and Аринкин, Н. А. and Зайдельман, Л. Я. and Котов, А. А.},
+	title        = {Разработка модели коммуникативного поведения робота Ф-2 на основе мультимодального корпуса «REC»},
+	booktitle    = {Компьютерная лингвистика и интеллектуальные технологии: по материалам ежегодной международной конференции «Диалог» (Москва, 30 мая — 2 июня 2018~г.)},
+	year         = {2018},
+	volume       = {17(24)},
+	pages        = {831--844},
+	language     = {russian},
+}
