some fixes after the first meeting

--- a/nir/research/04-analysis.tex
+++ b/nir/research/04-analysis.tex
@@ -4,19 +4,19 @@
 
 % что то мб про то, что люди склонны взаимодействовать с роботами как с людьми
 
-\textbf{Аффективная робототехника} -- сфера деятельности, которая является пересечением между областями аффективных вычислений и человеко-машинной коммуникации. Она находит применение в различных областях, таких как: 
+\textbf{Аффективная робототехника} --- сфера деятельности, которая является пересечением между областями аффективных вычислений и человеко-машинной коммуникации. Она находит применение в следующих областях. 
 
 \begin{itemize}
-	\item \textbf{медицина:} использование роботов для ухода за пожилыми людьми \cite{affect-rob-in-med, affect-rob-in-med-2};
+	\item \textbf{Медицина:} использование роботов для ухода за пожилыми людьми \cite{affect-rob-in-med, affect-rob-in-med-2}.
 	
-	\item \textbf{образование:} роботы помогают в обучении детей, моделировании явлений, дистанционном участии в уроках и поддержке учителей, выполняя вспомогательные и интерактивные функции \cite{affect-rob-in-edu};
+	\item \textbf{Образование:} роботы помогают в обучении детей, моделировании явлений, дистанционном участии в уроках и поддержке учителей, выполняя вспомогательные и интерактивные функции \cite{affect-rob-in-edu}.
 	
-	\item \textbf{работа с клиентами:} роботы всё чаще применяются в сферах с активным человеческим взаимодействием — например, в аэропортах, музеях, отелях и ресторанах. \cite{affect-rob-in-serv};
+	\item \textbf{Работа с клиентами:} роботы всё чаще применяются в сферах с активным человеческим взаимодействием — например, в аэропортах, музеях, отелях и ресторанах \cite{affect-rob-in-serv}.
 	
-	\item и др. \cite{affect-rob-in-other-fields}.
+	\item и др. \textcolor{red}{?????} \cite{affect-rob-in-other-fields}.
 \end{itemize}
 
 
-\textbf{Цель аффективной робототехники} -- приблизить машину к человеческому опыту и восприятию, позволяя роботам обмениваться эмоциональной информацией с людьми. Это включает в себя способность распознавать и интерпретировать человеческие эмоции, а также проявлять социальное и эмоциональное поведение \cite{affect-rob-goal}.
+\textbf{Цель аффективной робототехники} -- приблизить взаимодействие человека с машиной к человеческому опыту и восприятию, полученному в межличностном взаимодействии. В частности, средством достижения этой цели может быть введение такой функциональности роботов, которая позволит роботам обмениваться с людьми не только информацией, но и аффективной составляющей её восприятия --- аналогом эмоциональной окраски информации человеком или его отношения к ней. Для формирования такого человеко-машинного взаимодействия потребуется придать роботам способность распознавать и интерпретировать человеческие эмоции и/или проявлять социальное и эмоциональное поведение \cite{affect-rob-goal}.
 
 
