--- a/nir/research/05-design.tex
+++ b/nir/research/05-design.tex
@@ -18,14 +18,14 @@
 
 Для того, чтобы Ф-2 мог корректно среагировать на входящее сообщение на естественном языке (текстовое или аудио) необходимо провести соответствующую обработку сообщения. Это и есть задача лингвистического компонента (ЛК).
 
-ЛК разделен на 3 модуля, которые работают последовательно \cite{arch_of_the_robot}: 
+ЛК разделен на 3 модуля, которые работают последовательно \cite{arch_of_the_robot}. 
 
 \begin{enumerate}
-	\item \textbf{морфологический} -- для каждой словоформы в тексте приписывает ей морфологические и семантические признаки \cite{arch_of_the_robot_2}. В основе работы данного модуля лежит словарь из 100 тысяч лексем на основе проекта OpenCorpora \cite{arch_of_the_robot_3};
+	\item \textbf{Морфологический} --- каждой словоформе в тексте приписываются морфологические и семантические признаки \cite{arch_of_the_robot_2}. В основе работы данного модуля лежит словарь из 100 тысяч лексем на основе проекта OpenCorpora \cite{arch_of_the_robot_3}.
 	
-	\item \textbf{синтаксический} -- для каждого предложения строятся одно или несколько синтаксических деревьев. Для этого используется словарь формализованных правил русского языка на языке syntXML;
+	\item \textbf{Синтаксический} --- для каждого предложения строятся одно или несколько деревьев синтаксических зависимостей. Для этого используется словарь формализованных правил русского языка на языке syntXML.
 	
-	\item \textbf{семантический} -- для каждого синтаксического дерева строится его семантическое представление, назначая существительному, или местоимению определенную валентность и семантические признаки, связанные с валентностью.
+	\item \textbf{Семантический} --- для каждого синтаксического дерева строится его семантическое представление: узлам дерева назначаются определенные валентности (роли слов в предложении) и семантические признаки. %, связанные с валентностью.
 \end{enumerate}
 
 
@@ -35,10 +35,12 @@
 
 Поступающее на вход семантическое представление сравнивается с набором сценариев (д-сценарии и p-сценарии). Д-сценарии есть доминантные сценарии -- базовые аналоги эмоций, p-сценарии -- рациональные сценарии реагирования \cite{arch_of_the_robot_4}. 
 
-Каждый сценарий включает аналогичные семантические структуры -- множества признаков, распределённых по валентностям. Следовательно, для каждой пары вида <семантическое представление, сценарий> вычисляется мера близости, она зависит от числа совпавших семантических признаков в тождественных валентностях. На основе меры близости и чувствительности сценариев вычисляется активизация каждого сценария \cite{arch_of_the_robot_5}.
+Каждый сценарий включает аналогичные семантические структуры -- множества признаков, распределённых по валентностям. %это зеленое представление!
+Следовательно, для каждой пары вида <семантическое представление, сценарий> вычисляется мера близости, она зависит от числа совпавших семантических признаков в тождественных валентностях. На основе меры близости и чувствительности сценариев вычисляется активизация каждого сценария \cite{arch_of_the_robot_5}. Сценарий включает внутреннее представление смысла входного события и коммуникативную цель (КЦ) ответа на него.
 
-Наиболее активировавшийся сценарий выражается через коммуникативные функции, передавая на робота жесты, элементы мимики и речь в формате BML (Behavior Markup Language).
+Сценарий, получивший при активации наибольший вес, выбирается для реализации, Для КЦ ответа из базы реакций выбирается произвольная реакция из числа сопоставленных данной КЦ. Мультимодальная реакция включает жесты, элементы мимики и текст, оформленные в формате BML (Behavior Markup Language). Кадр поведения  передается в компонент управления для исполнения на роботе.
 
 \section{Компонент управления}
 
-Компонент управления отвечает выполнение поступивших BML-пакетов с помощью жестов, мимики, речи \cite{arch_of_the_robot}.
+Компонент управления отвечает за выполнение поступивших BML-пакетов с помощью жестов, мимики, речи \cite{arch_of_the_robot}. Текстовый сегмент поведенческого кадра .....
+Жестовая составляющая выполняется на основе перемещения сервомоторов робота по контрольным точкам, указанным в пакете команд, описывающих жест [Аринкин Н.А. ТЕМА. ВКР специалиста, специальность 09..... <<Программная инженерия>>. МГТУ им. Н. Э. Баумана, 2016. --- N c.68]
