--- a/nir/research/06-implementation.tex
+++ b/nir/research/06-implementation.tex
@@ -1,1 +1,30 @@
-\chapter{Технологический раздел}
+\chapter{Подходы к описанию персональных черт}
+
+\section{Большая пятерка}
+
+\textbf{Большая пятерка} -- это таксономия черт личности; она отображает, какие черты из тех, что люди пользуются для описания друг друга, группируются под одним общим знаменателем \cite{big_five_traits}. 
+
+Термин <<Большая пятерка>> был введен  Л. Голдбергом в своей работе 1981 года \cite{goldberg1981language} как название для выделенных 5 черт личности:
+
+\begin{itemize}
+	\item \textbf{экстраверсия} -- показывает, насколько человек любит общение, полон энергии и положительных эмоций. Экстраверты активны, общительны, любят внимание и выражение своей позиции; слишком высокий уровень может проявляться навязчивостью. Низкие показатели отражают интроверсию -- спокойствие, самостоятельность, низкую потребность во внешней стимуляции; крайние значения могут указывать на трудности в социальных контактах \cite{big_five_traits};
+	
+	\item \textbf{доброжелательность} -- отражает просоциальную направленность личности. Люди с высокими показателями мягкие, терпимые, ориентированы на интересы группы, но при чрезмерной выраженности рискуют потерять индивидуальность. Низкие показатели характеризуют эгоцентричных, холодных и критичных людей, сосредоточенных на личной выгоде, однако способных к объективным решениям. \cite{radyuk2016bigfive};
+	
+	\item \textbf{добросовестность} -- показывает, насколько добросовестно человек выполняет свои обязанности, его целеустремленность, организованность, мотивированность. Высокие оценки по шкале являют надежную, пунктуальную, самодисциплинированную, педантичную личность. Низкие оценки - ленивую, беспечную, слабовольную, нецелеустремленную \cite{big_five_traits};
+	
+	\item \textbf{нейротизм} -- склонность испытывать негативные эмоции. Шкала отражает уровень эмоциональной стабильности личности. Высокие показатели указывают на повышенную реактивность и тревожность, тогда как низкие — на спокойное отношение к жизненным ситуациям \cite{big_five_traits};
+	
+	\item \textbf{открытость опыту} -- отражает интерес человека к новому — идеям, людям, местам. Высокие показатели связаны с творчеством, развитым воображением и тягой к новизне, низкие -- с консерватизмом, исполнительностью и предпочтением привычного. \cite{big_five_traits}.
+\end{itemize}
+
+Каждая из вышеперечисленных черт включает 6 дополнительных, более конкретных аспектов, без которых понимание основных факторов было бы неполным \cite{big_five_traits}, см. рисунок~\ref{img:big-five-traits}.
+
+\includeimage
+{big-five-traits} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
+{f} % Обтекание (без обтекания)
+{h} % Положение рисунка (см. figure из пакета float)
+{1\textwidth} % Ширина рисунка
+{Структура большой пятерки} % Подпись рисунка
+
+Существует множество способов измерения Большой пятерки. Наиболее популярным является коммерческий опросник NEO PI-R, состоящий из 240 вопросов. Существуют также свободно доступные аналоги этого теста, такие так IPIP-NEO-300 (300 вопросов) и IPIP-NEO-120 (120 вопросов). Один из последних методов измерения большой пятерки является BFI-2, разработанная Оливером Джоном и Кристофером Сото в 2015 году \cite{big_five_inventory}.
