--- a/nir/research/biblio.bib
+++ b/nir/research/biblio.bib
@@ -104,3 +104,38 @@
 	pages        = {831--844},
 	language     = {russian},
 }
+
+@misc{big_five_traits,
+	title="Большая пятерка, или пятифакторная модель личности [Электронный ресурс].",
+	howpublished="Режим доступа: \url{https://elibrary.ru/download/elibrary_35030177_34333016.pdf} (дата обращения: 09.10.2025)."
+}
+
+@article{goldberg1981language,
+	author    = {Goldberg, Lewis R.},
+	title     = {Language and individual differences: The search for universals in personality lexicons},
+	journal   = {Review of Personality and Social Psychology},
+	year      = {1981},
+	volume    = {2},
+	pages     = {141--165}
+}
+
+@inproceedings{radyuk2016bigfive,
+	author    = {Radyuk, O. M. and Basinskaya, I. V. and Voronkova, Ya. Yu.},
+	title     = {«Большая пятёрка» личностных особенностей},
+	booktitle = {II Международный съезд Ассоциации когнитивно-поведенческой психотерапии: сборник научных статей},
+	address   = {Санкт-Петербург},
+	publisher = {СИНЭЛ},
+	year      = {2016},
+	pages     = {92--104},
+	institution = {Белорусский государственный университет, Минск, Беларусь}
+}
+
+@misc{big_five_questionarre,
+	title="Опросник Большой пятерки, IPIP-NEO-300 [Электронный ресурс].",
+	howpublished="Режим доступа: \url{https://psytests.org/big5/ineoA.html} (дата обращения: 09.10.2025)."
+}
+
+@misc{big_five_inventory,
+	title="Опросник Большой пятерки, BFI-2 [Электронный ресурс].",
+	howpublished="Режим доступа: \url{https://psytests.org/big5/bfiB.html} (дата обращения: 09.10.2025)."
+}
