--- a/nir/research/research.tex
+++ b/nir/research/research.tex
@@ -16,7 +16,7 @@
 \include{03-introduction}
 \include{04-analysis}
 \include{05-design}
-%\include{06-implementation}
+\include{06-implementation}
 %\include{07-research}
 %\include{08-conclusion}
 
